CSDEV/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HAE: Case record type for Customer Service for related list</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Availability_Status__c</fullName>
        <description>HAE:</description>
        <label>Availability Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Business_Unit__c</fullName>
        <description>HAE: This field denotes the business unit associated with the product.</description>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Blood Center</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Case_Height_inches__c</fullName>
        <description>HAE:</description>
        <label>Case Height (inches)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Length_inches__c</fullName>
        <description>HAE:</description>
        <label>Case Length (inches)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Weight__c</fullName>
        <description>HAE:</description>
        <label>Case Weight (kgs)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Width_inches__c</fullName>
        <description>HAE:</description>
        <label>Case Width (inches)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Customer_Communication__c</fullName>
        <description>HAE:</description>
        <label>Customer Communication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAE_Estimated_Date_of_Recovery__c</fullName>
        <description>HAE:</description>
        <label>Estimated Date of Recovery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HAE_Product_Notes__c</fullName>
        <description>HAE:</description>
        <label>Product Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAE_Replacement_Item__c</fullName>
        <description>HAE:</description>
        <label>Replacement Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Substitute_Item__c</fullName>
        <description>HAE:</description>
        <label>Substitute Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>*Used in Service</description>
        <inlineHelpText>Item Status from Oracle</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>HAE_Estimated_Date_of_Recovery_Check</fullName>
        <active>true</active>
        <description>HAE: Date should not be a past date and should have a validation to select a date upto 1 year in future.</description>
        <errorConditionFormula>OR( 
	HAE_Estimated_Date_of_Recovery__c &lt; TODAY(),
    IF(
		OR( 
			MOD( YEAR( HAE_Estimated_Date_of_Recovery__c ), 400 ) = 0, 
			AND( 
				MOD( YEAR( HAE_Estimated_Date_of_Recovery__c ), 4 ) = 0,
				MOD( YEAR( HAE_Estimated_Date_of_Recovery__c ), 100 ) != 0
			)
		),
		 IF(HAE_Estimated_Date_of_Recovery__c - TODAY() &gt; 366, TRUE, FALSE),
		 IF(HAE_Estimated_Date_of_Recovery__c - TODAY() &gt; 365, TRUE, FALSE)
	) 
)</errorConditionFormula>
        <errorDisplayField>HAE_Estimated_Date_of_Recovery__c</errorDisplayField>
        <errorMessage>Please select a date within 1 year in future.</errorMessage>
    </validationRules>
</CustomObject>